Change for file name issue
Ceci servait à résoudre le fait qu’il y avait des noms de fichier avec
des majuscules

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     <h1>Icons</h1>
 
     <ol>
-    <li><span><img src="images/avance.svg" alt="avance" /></span>avance</li>
-    <li><span><img src="images/retour.svg" alt="retour" /></span>retour</li>
+    <li><span><img src="images/aavance.svg" alt="avance" /></span>avance</li>
+    <li><span><img src="images/rretour.svg" alt="retour" /></span>retour</li>
     <li><span><img src="images/suivant.svg" alt="suivant" /></span>suivant</li>
     <li><span><img src="images/precedent.svg" alt="precedent" /></span>precedent</li>
     <li><span><img src="images/sauvegarder.svg" alt="sauvegarder" /></span>sauvegarder</li>
